# markdownlite

./: CHANGELOG.md  CHECK_REPORT.md  INSTALL.md  ISSUE_ANALYSIS.md  ITERATION_TODOS.md  README.md  TEST_COVERAGE.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  default-content.md  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src/components/: EditorPane.vue  MenuBar.vue  PreviewPane.vue
src/render/: markdown.js  mermaid.js
src/services/: fileService.js
src/stores/: useDocument.js
tests/: setup.js
tests/render/: markdown-line-numbers.test.js  markdown.test.js  mermaid.test.js
tests/services/: fileService.test.js
tests/stores/: useDocument.test.js
